# int-interval-set

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: bench-pages.yml  codspeed.yml  gate.yaml  release.yml
benches/: construct.rs  contains_interval.rs  contains_point.rs  coverage_ratio_f32_of.rs  coverage_ratio_f64_of.rs  covered_len_of.rs  difference_with_interval.rs  difference_with_set.rs  intersection_with_interval.rs  intersection_with_set.rs  intersects_interval.rs  interval_containing_point.rs  intervals_intersecting.rs  iter_intervals.rs  symmetric_difference_with_interval.rs  symmetric_difference_with_set.rs  uncovered_len_of.rs  union_with_interval.rs  union_with_set.rs
benches/support/: mod.rs
src/: batch.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  int_co_set.rs  isize.rs  lib.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/batch/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/i128/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/i16/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/i32/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/i64/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/i8/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/int_co_set/: impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  test_support.rs
src/isize/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/u128/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/u16/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/u32/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_construction.rs  impls_for_find_out_coverage.rs  impls_for_predicates.rs  impls_for_searching.rs  test_support.rs  tests.rs
src/u64/: funcs_for_canonicalization.rs  impls_for_accessors.rs  impls_for_algebra.rs  impls_for_construction.rs  (+5 more)
(+370 files in other folders)
