[workspace]
members = [".", "xtask/codegen"]

[package]
name = "int-interval-set"
version = "0.2.0"
edition = "2024"
description = "Integer half-open interval set structures built on top of int-interval."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/int-interval-set"
readme = "README.md"

keywords = ["interval", "set", "range", "integer", "algorithms"]
categories = ["data-structures", "algorithms"]

[dependencies]
crossbeam-skiplist = "0.1.3"
int-interval = "0.7.0"

[dev-dependencies]
proptest = "1.10.0"

[lib]
doctest = false
