[workspace]
members = ["."]

[package]
name = "int-interval-set"
version = "0.3.1"
edition = "2024"
description = "Integer half-open interval set structures built on top of int-interval."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/int-interval-set"
readme = "README.md"

keywords = ["interval", "set", "range", "integer", "algorithms"]
categories = ["data-structures", "algorithms"]

[dependencies]
int-interval = "0.9.0"
rayon = "1.12.0"

[dev-dependencies]
proptest = "1.10.0"

[lib]
doctest = false
